[gd_scene load_steps=4 format=3 uid="uid://dvnif7hym3q8x"]

[ext_resource type="Script" path="res://scripts/settingsmenu.gd" id="1_x06v1"]
[ext_resource type="Shader" path="res://scripts/shader/blur.gdshader" id="2_ua02d"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ltaaj"]
shader = ExtResource("2_ua02d")

[node name="Options Menu" type="CanvasLayer"]
script = ExtResource("1_x06v1")

[node name="Tabs" type="TabContainer" parent="."]
material = SubResource("ShaderMaterial_ltaaj")
offset_right = 1152.0
offset_bottom = 648.0

[node name="Graphics" type="Control" parent="Tabs"]
layout_mode = 2

[node name="Graphics" type="OptionButton" parent="Tabs/Graphics"]
layout_mode = 0
offset_left = 496.0
offset_top = 257.0
offset_right = 688.0
offset_bottom = 290.0
item_count = 3
popup/item_0/text = "Low"
popup/item_0/id = 0
popup/item_1/text = "Medium"
popup/item_1/id = 1
popup/item_2/text = "High"
popup/item_2/id = 2

[node name="Video" type="Control" parent="Tabs"]
visible = false
layout_mode = 2

[node name="Vsync" type="CheckButton" parent="Tabs/Video"]
layout_mode = 0
offset_left = 224.0
offset_top = 232.0
offset_right = 268.0
offset_bottom = 256.0
text = "V-Sync"

[node name="Window mode" type="OptionButton" parent="Tabs/Video"]
layout_mode = 0
offset_left = 184.0
offset_top = 336.0
offset_right = 383.0
offset_bottom = 368.0
item_count = 5
selected = 0
popup/item_0/text = "Window mode"
popup/item_0/id = 0
popup/item_0/disabled = true
popup/item_0/separator = true
popup/item_1/text = "Windowed"
popup/item_1/id = 1
popup/item_2/text = "Maximized"
popup/item_2/id = 2
popup/item_3/text = "Fullscreen"
popup/item_3/id = 3
popup/item_4/text = "Exclusive Fullscreen"
popup/item_4/id = 4

[node name="FPS Counter" type="CheckButton" parent="Tabs/Video"]
visible = false
layout_mode = 0
offset_left = 512.0
offset_top = 232.0
offset_right = 556.0
offset_bottom = 256.0
text = "FPS Counter"

[node name="Label" type="Label" parent="Tabs/Video"]
visible = false
layout_mode = 0
offset_left = 776.0
offset_top = 240.0
offset_right = 816.0
offset_bottom = 280.0
text = "For FPS Counter:
F4 = In window title
F3 = In-Game"

[node name="Audio" type="Control" parent="Tabs"]
visible = false
layout_mode = 2

[node name="Music Vol" type="HSlider" parent="Tabs/Audio"]
layout_mode = 0
offset_left = 96.0
offset_top = 176.0
offset_right = 416.0
offset_bottom = 200.0

[node name="Music text" type="Label" parent="Tabs/Audio/Music Vol"]
layout_mode = 0
offset_top = -24.0
offset_right = 46.0
offset_bottom = -1.0
text = "Music"

[node name="SFX Vol" type="HSlider" parent="Tabs/Audio"]
layout_mode = 0
offset_left = 96.0
offset_top = 296.0
offset_right = 416.0
offset_bottom = 320.0

[node name="SFX text" type="Label" parent="Tabs/Audio/SFX Vol"]
layout_mode = 0
offset_top = -32.0
offset_right = 46.0
offset_bottom = -9.0
text = "SFX"

[connection signal="item_selected" from="Tabs/Graphics/Graphics" to="." method="_on_graphical_option_item_selected"]
[connection signal="toggled" from="Tabs/Video/Vsync" to="." method="_on_vsync_toggled"]
[connection signal="item_selected" from="Tabs/Video/Window mode" to="." method="_on_window_modes_item_selected"]
[connection signal="value_changed" from="Tabs/Audio/Music Vol" to="." method="_on_music_vol_value_changed"]
[connection signal="value_changed" from="Tabs/Audio/SFX Vol" to="." method="_on_sfx_vol_value_changed"]
